--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,3 +10,5 @@ jobs:
       - run: node --version
       - run: npm install
       - run: npm test
+      - snyk/scan:
+          fail-on-issues: true
