--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
-
+orbs: 
+  snyk: snyk/snyk@1.1.2
 jobs:
   build:
     docker:
       - image: cimg/node:16.13.2
-
     steps:
       - checkout
       - run: node --version
