--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,5 @@ jobs:
       - run: npm install
       - run: npm test
       - snyk/scan:
+          token-variable: SNYK_TOKEN
           fail-on-issues: true
