--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,6 @@ jobs:
       - run: npm install
       - run: npm test
       - snyk/scan:
-          token-variable: SNYK_TOKEN
+          env:
+            SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           fail-on-issues: true
