--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.10
 orbs: 
   snyk: snyk/snyk@1.1.2
+env:
+  SNYK_TOKEN: ${{ secrets.SYNK_TOKEN }}
 jobs:
   build:
     docker:
@@ -12,5 +14,4 @@ jobs:
       - run: npm install
       - run: npm test
       - snyk/scan:
-          token-variable: SNYK_TOKEN
           fail-on-issues: true
