--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.10
 orbs: 
   snyk: snyk/snyk@1.1.2
+env:
+  SNYK_TOKEN: 3551382d-4809-44fa-ac27-86fea9e25657
 jobs:
   build:
     docker:
