--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2.10
+version: 2.1
+orbs:
+  snyk: snyk/snyk@1.1.2
 jobs:
   build:
     docker:
@@ -9,4 +11,5 @@ jobs:
       - run: node --version
       - run: npm install
       - run: npm test
+      - snyk/scan
       
