--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 applications:
-  - name: pipeline
+  - name: mypipeline
     buildpack: https://github.com/cloudfoundry/staticfile-buildpack.git
     random-route: true
     memory: 256M
